minor fixes on mobile layout

--- a/src/components/Layout/layout.scss
+++ b/src/components/Layout/layout.scss
@@ -2,16 +2,26 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  max-width: 100%;
+  overflow-x: hidden;
 
   &__body {
     display: flex;
     flex: 1;
+    max-width: 100%;
+    overflow-x: hidden;
   }
 
   &__content {
     flex: 1;
     padding: 64px;
     background: #fbfbfb;
+    max-width: 100%;
+    overflow-x: hidden;
+
+    @media (max-width: 624px) {
+      padding: 32px;
+    }
   }
 }
 
